# Discraft

./: .gitignore  Cargo.toml  README.md  TODO.MD  help_prompt.txt
client/: Cargo.toml
client/src/: main.rs
diagrams/: .$packet.drawio.bkp  networking.drawio  packet.drawio
null/: .rustc_info.json
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: discord.rs  lib.rs  logging.rs  message.rs  sockets.rs
src/: cli.rs  discord.rs  logging.rs  main.rs  message.rs  partitioning.rs  sockets.rs
