[package]
name = "discraft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
dotenv = "0.15.0"
hex = "0.4.3"
once_cell = "1.20.2"
serenity = { version = "0.12.4", features = ["full"] }
thiserror = "2.0.3"
base85 = "2.0.0"
clap = "4.5.22"
