[package]
name = "discraft"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
hex = "0.4.3"
once_cell = "1.20.2"
serenity = { version = "0.12.4", features = ["full"] }
thiserror = "2.0.3"
base85 = "2.0.0"
dashmap = "6.1.0"
lazy_static = "1.5.0"
clap = { version = "4.5.22", features = ["derive"] }
env_logger = "0.11.6"
base64 = "0.22.1"
rand = "0.9.1"
