[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
hex = "0.4.3"
log = "0.4.22"
once_cell = "1.20.2"
serenity = { version = "0.12.4", features = ["full"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
